[package]
name = "holochain_env_setup"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.14", features = ["json"] }
anyhow = "1.0"
one_err = "0.0.8"
url = "2.2"
log = "0.4.17"
tracing = { version = "0.1", features = ["attributes"] }
lazy_static = "1"
isahc = "1.7.2"
snafu = "0.7.4"
serde = "1.0.123"
serde_yaml = "0.9"
dotenv = "0.15.0"
tempfile = "3.1"
chrono = "0.4.0"
sodoken = "0.0.9"
holochain_keystore = "0.2.0"
lair_keystore_api = "0.2.4" # run lair-keystore --version in nix-shell to get the current version
taskgroup_manager = { path = "../taskgroup_manager" }

